# rtos_greenhouse

./: .gitignore  CMakeLists.txt  README.md
freertos_config/: FreeRTOSConfig.h
header/: controller.h  main.h  pump.h  sensor.h  utils.h  valve.h
src/: controller.c  main.c  pump.c  sensor.c  utils.c  valve.c
